# VulpineEngine

./: .gitignore  CMakeLists.txt  README.md  VersionConfig.h.in
data/config/: vulpine.json
data/objects/: camera.obj.json  chaco-fall.obj.json  chaco.obj.json
data/scenes/: default.scene.json
data/sprites/: chaco.sprite.json  hungry.sprite.json
src/: main.cpp
src/Application/: main.cpp
src/Vulpine/: vppch.h
src/Vulpine/Core/: Assert.h  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/Vulpine/Core/Config/: EngineConfig.cpp  EngineConfig.h  JsonSchema.h  RenderConfig.cpp  RenderConfig.h  WindowConfig.cpp  WindowConfig.h
src/Vulpine/Core/DataStructures/: Vector.h
src/Vulpine/DataStructures/: Vec.h
src/Vulpine/Managers/: EntityManager.cpp  EntityManager.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
src/Vulpine/Renderer/: Renderer.cpp  Renderer.h
src/Vulpine/Scene/: Components.h  Entity.cpp  Entity.h  Loaders.cpp  Loaders.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SpriteLoader.cpp  SpriteLoader.h
src/Vulpine/Scene/Components/: AnimatedSprite.h  Camera.h  Component.h  Components.h  Rigidbody.h  Sprite.h  SpriteRenderer.h  Transform.h
src/Vulpine/Scene/Systems/: Physics.cpp  Physics.h  SceneRenderer.cpp  SceneRenderer.h  SpriteAnimator.cpp  SpriteAnimator.h  System.h  TextureLoader.cpp  TextureLoader.h
src/Vulpine/Utils/: Clock.cpp  Clock.h  Serializable.h  Utils.cpp  Utils.h
